--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,3 +12,12 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+.page-footer {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  height: 100px;
+  background-color: #fff;
+  box-shadow: -4px -6px -2px rgba(0, 0, 0, 0.04);
+}
